Fix an issue with align-items start.

--- a/components/wrapper/Navigation.module.css
+++ b/components/wrapper/Navigation.module.css
@@ -90,7 +90,6 @@
 .open .mobileMenu {
     display: flex;
     flex-direction: column;
-    align-items: start;
     justify-content: flex-start;
 }
 
